security/security-event-hub/manifests/sample/gateway_argo_webhook.yml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook-gateway-with-standard-nats
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
spec:
  replica: 1
  eventSourceRef:
    name: "webhook-event-source"
    # optional, if event source is deployed in a different namespace than the gateway
    # namespace: "other-namespace"
  type: "webhook"
  processorPort: "9330"
  eventProtocol:
    type: "NATS"
    nats:
      url: "nats://nats:4222"
      type: "Standard"
  template:
    metadata:
      name: "webhook-gateway-nats"
      labels:
        gateway-name: "webhook-gateway-nats"
    spec:
      containers:
        - name: "gateway-client"
          image: "argoproj/gateway-client:v0.12"
          imagePullPolicy: "Always"
          command: ["/bin/gateway-client"]
        - name: "webhook-events"
          image: "argoproj/webhook-gateway:v0.12"
          imagePullPolicy: "Always"
          command: ["/bin/webhook-gateway"]
      serviceAccountName: "argo-events-sa"
  service:
    metadata:
      name: webhook-gateway-svc
    spec:
      selector:
        gateway-name: "webhook-gateway-nats"
      ports:
        - port: 12000
          protocol: TCP
          targetPort: 12000
      type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    gateway-name: webhook-gateway-nats
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
  name: webhook-gateway-service
spec:
  host: ''
  to:
    kind: Service
    name: webhook-gateway-svc
    weight: 100
  wildcardPolicy: None
